Fix nav margins on mobile

--- a/shared/scss/components/common/fluidtable.scss
+++ b/shared/scss/components/common/fluidtable.scss
@@ -15,7 +15,7 @@
 
 .fluidtable__row {
   border-bottom: 1px solid $brand-gray;
-  padding: $base*4 0;
+  padding: $base*2 0;
 
   @media (min-width: $width-md) {
     display: flex;
