--- a/shared/scss/components/common/nav.scss
+++ b/shared/scss/components/common/nav.scss
@@ -75,6 +75,7 @@
   background: none;
   
   .navbar-nav {
+    margin: 0;
     border-bottom: 1px solid $navbar-border-color;
     width: 100%;
 
